[package]
name = "format-logs"
version = "0.1.0"
authors = ["Emily Crandall Fleischman <emily@commure.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log4rs = "0.13.0"
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.57"
log = "0.4.11"
chrono = { version = "0.4.19", features = ["serde"] }
log-mdc = "0.1.0"
anyhow = "1.0.32"
structopt = "0.3.20"
